--- a/rs/catr/Cargo.toml
+++ b/rs/catr/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 clap = "2.33"
 
 [dev-dependencies]
-assert_cmd = "2.0"
-predicates = "2.0"
+assert_cmd = "2"
+predicates = "2"
 rand = "0.8"
+pretty_assertions = "1.4.0"
+anyhow = "1.0"
+
+
+
